  - Fix adding events to calendar on Windows systems
  - Improved session management system. 
  - Various minor fixes.
  - Fix src directory being moved on Windows systems, bugs #586518 
    #605256 #610676.
  - Bugfixes for using SquirrelMail with register_globals = off
  - Write/close session before redirecting after login; this should (partially)
    solve the "You must be logged in"-trouble.

Version 1.2.8 -- September 14, 2002
-----------------------------------
  - Merging contrib/RPM/* files with RH's version of RPM, since
    I'd rather let them do all the hard work. :)
  - HTML cleanup on search and addressbook pages
  - Fixes for multiple XXS exploits on the addressbook,
    search, help, and options pages
  - more accurate error messages on failed login
  - HTML table cleanup when viewing attachments
  - fix for X-MSMail-Priority conflict bug #600369
  - fix for multiple email addresses on the same message line
  - fix for "." on a single line in a text attachment bug #598750
  - Core code and plugins converted to work with register_globals Off
  - fix for reply quoting on resumed drafts
  - fix for fgets errors in file_prefs bug #578834
  - fix for date format on calendar day view bug #582919
  - fix for org. logo width/height values bug #572807
  - fix for reading/writing ldap prefs with conf.pl bug #57595
  - fix for 'fixed' font style in css bug #571463
  - fix for attachments in safe mode bug #585340
  - fix for forward attachment bug #585836
  - fix for php warning when saving drafts bug #585012
  - returned generic_header hook to page_header.php bug #554278
  - fix for syntax error in darkness theme bug #576066
  - fix for some attachments not being displayed bug #577052
  - fix for matching uppercase headers on mailbox display bug #584082
  - fix for folder names containing regex characters bug #574889, #578156
  - fix for endless loop on raw binary data in email bug #547662

Version 1.2.7 -- June 21, 2002
------------------------------